[gd_scene load_steps=4 format=3 uid="uid://dn2s1xgmncu2h"]

[ext_resource type="Script" uid="uid://q0yf5ubn4gyw" path="res://scenes/run.gd" id="1_2d5n6"]
[ext_resource type="Texture2D" uid="uid://1xps7kycymk2" path="res://art/background.png" id="2_6elw1"]
[ext_resource type="PackedScene" uid="uid://cfviqt5wnihmo" path="res://scenes/joker_ui.tscn" id="3_kyqep"]

[node name="Run" type="Node2D"]
script = ExtResource("1_2d5n6")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.12598425, 0.12621196)
texture = ExtResource("2_6elw1")
centered = false

[node name="AnteLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="SmallBlindButton" type="Button" parent="AnteLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = 29.0
offset_right = -44.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Select"

[node name="BigBlindButton" type="Button" parent="AnteLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = 29.0
offset_right = 28.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Select"

[node name="BossBlindButton" type="Button" parent="AnteLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 49.0
offset_top = 29.0
offset_right = 103.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Select"

[node name="ShopLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="BlindLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="JokerLayer" type="CanvasLayer" parent="."]

[node name="JokerArea" type="HBoxContainer" parent="JokerLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 4.0
offset_right = 75.0
offset_bottom = 34.0
grow_horizontal = 2
alignment = 1

[node name="JokerUI" parent="JokerLayer/JokerArea" instance=ExtResource("3_kyqep")]
layout_mode = 2

[node name="JokerUI2" parent="JokerLayer/JokerArea" instance=ExtResource("3_kyqep")]
layout_mode = 2

[node name="JokerUI3" parent="JokerLayer/JokerArea" instance=ExtResource("3_kyqep")]
layout_mode = 2
